# tiago-trajectory-controller

./: CMakeLists.txt
src/: run_traj_control.cpp  run_traj_control_easy.cpp
